# NEXUS-COMMAND-

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_OVERVIEW.txt  README.md  architecture.mmd  main.py  nixpacks.toml  railway.json  requirements.txt  requirments.txt  server.py  start.sh  url.txt
backend/: Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  start.sh
backend/app/: __init__.py
backend/app/agents/: supervisor.py  tools.py
backend/app/api/: dashboard.py
backend/app/core/: billing_middleware.py  config.py  db.py  llm.py  rag.py
backend/app/mcp/: github_client.py  salesforce_client.py  slack_client.py
backend/knowledge/: nexus_docs.md
backend/scripts/: setup_slack.py  simple_test.py  slack_listener.py  test_gemini.py  test_gemini_15.py  test_gemini_15_latest.py  test_gemini_15_pro.py  test_gemini_20.py
backend/tests/: test_ops.py  test_suite.py
frontend/: Dockerfile  package-lock.json  package.json  start.sh
frontend/.next/dev/: build-manifest.json  prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CommandBar.tsx  GovernanceTable.tsx  Mermaid.tsx  MeshCard.tsx  MeshGraph.tsx
frontend/src/hooks/: useNexusDashboard.ts
frontend/src/types/: nexus.ts
supabase/functions/_shared/: cors.ts
supabase/functions/governance-ingest/: index.ts
supabase/migrations/: 001_rpc_and_indexes.sql  002_codereview_v2.sql
(+71 files in other folders)
